<resources>

    <string name="app_name">Smartick</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Smartick</string>
    <string name="title_activity_welcome">Smartick - Bienvenido</string>
    <string name="welcome">¡Bienvenido a Smartick!</string>
    <string name="login">Entrar</string>
    <string name="registerUser">Registrarse</string>
    <string name="menu_exit">Salir</string>
    <string name="menu_logout">Desconectar</string>
    <string name="need_internet_message">Necesitas tener acceso a Internet para usar Smartick</string>
    <string name="need_internet">Necesitas Internet</string>
    <string name="retry">Volver a intentar</string>
    <string name="whoAreYou">¿Quién eres?</string>
    <string name="otherUser">Otro usuario:</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="singIn">Registrarse</string>
    <string name="offLineError">Error de conexión</string>
    <string name="loginAlumno">Alumno</string>
    <string name="loginTutor">Tutor</string>
    <string name="youAre">Eres:</string>
    <string name="back">Volver</string>
</resources>