<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/clear_blue" >


    <TextView
        android:id="@+id/blankspace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="22dp"
        android:background="@color/white"
        android:drawableBottom="@drawable/bg_header" />

    <ImageView
        android:id="@+id/logoWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="152dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/loginUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button"
        style="@style/button"
        android:text="@string/login" />

    <Button
        android:id="@+id/registerUser"
        style="@style/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginUser"
        android:layout_below="@+id/loginUser"
        android:layout_marginTop="23dp"
        android:background="@drawable/button"
        android:text="@string/registerUser" />

</RelativeLayout>